This is the working CSS Template that the page model should implement. Still haveing stupid issues with clipping. Eventually will work... Signed-off-by: unknown <Scotty@.(none)>

--- a/php/http--old/css_template_progress/css_template_version_6/template.css
+++ b/php/http--old/css_template_progress/css_template_version_6/template.css
@@ -1,22 +1,25 @@
 /* This template has been revised to correct errors with margins as well as 
 	small issues with readability and portability. */
 
+	
 html {
 	/*Fall Back Option*/
 	background: white;
 	background-image: url('html_background.png');
 	background-position: left top;
 	background-repeat: repeat-x;
-	height: 100%;
+
 }
 
 body{
+	display: block;
 	margin: auto;
 	width: 1024px;
-	height: 100%;
+	height: auto;
 	background-image: url('body_background_labeled.png');
 	background-position: left top;
 	background-repeat: no-repeat;
+	padding-bottom: 50px;
 }
 
 /* IDs (unique) elements */
@@ -31,8 +34,6 @@ div#links{
 	border: 1px solid black;
 	border-top: 0px;
 
-	
-	
 	-moz-border-bottom-left-radius: 10px;
 	-moz-border-bottom-right-radius: 1px;
 	-moz-border-top-left-radius: 0px;
@@ -52,11 +53,11 @@ div#links{
 	padding-left: 10px;
 	padding-right: 10px;
 	
-	
 	background-image: url('link_background_swatch.png');
 	background-position: left top;
 	background-repeat: repeat-x;
 	background-attachment: fixed;
+	color: white;
 }
 
 div#links_left{
@@ -85,24 +86,27 @@ div#container{
 	font-family: "Arial";
 	font-size: 11pt;
 	height: 100%;
-	clear: both;
+	position: relative;
+	
 }
 
-
-
 div#footer{
-
-	width: 100%;
-	height: 30px;
-	clear: both;
+	height: 50px;
+	margin-left: 6px;
+	margin-right: 6px;
 	border-top: 1px dashed #436188;
-	padding: 10px;
 	font-size: 9px;
 	font-color: #666;
 	text-align: center;
-	float: center;
+	width: 1010px;
+	background: #404349;
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
+	border-left: 1px solid #535353;
+	border-right: 1px solid #535353;
+	color: white;
 }
-
 
 div#content{	
  	margin-left: 250px;
